# lab-hazard-manager

./: README.md
jake_kasper/: meta_vehicle.bhv  meta_vehicle.moos
jake_kasper_baseline/: meta_vehicle.moos
krailey/: .LastOpenedMOOSLogDirectory  calc_belief  calc_belief.cpp  calc_belief_simple.cpp  launch.sh  meta_vehicle.bhv  meta_vehicle.moos  roc  roc_curv  roc_curve  roc_curve.cpp  targ_jake.bhv  targ_jake.moos  targ_kasper.moos
krailey/LOG_JAKE_9_4_2019_____18_46_06/: LOG_JAKE_9_4_2019_____18_46_06._moos  LOG_JAKE_9_4_2019_____18_46_06.slog  LOG_JAKE_9_4_2019_____18_46_06.ylog
krailey/LOG_KASPER_9_4_2019_____18_46_06/: LOG_KASPER_9_4_2019_____18_46_06._moos  LOG_KASPER_9_4_2019_____18_46_06.slog  LOG_KASPER_9_4_2019_____18_46_06.ylog  targ_kasper._bhv
krailey/LOG_SHORESIDE_9_4_2019_____18_46_06/: LOG_SHORESIDE_9_4_2019_____18_46_06._moos  LOG_SHORESIDE_9_4_2019_____18_46_06.slog  LOG_SHORESIDE_9_4_2019_____18_46_06.ylog
pHazardPath/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  HazardPath_Info.cpp  HazardPath_Info.h  main.cpp
pOptSensor/: CMakeLists.txt  OptSensor.cpp  OptSensor.cpp~  OptSensor.h  OptSensor.h~  OptSensor_Info.cpp  OptSensor_Info.h  main.cpp  pOptSensor.moos
uFldHazardMgrX/: CMakeLists.txt  HazardMgrX.cpp  HazardMgrX.cpp~  HazardMgrX.h  HazardMgrX.h~  HazardMgrX_Info.cpp  HazardMgrX_Info.h  HazardSearch.cpp  HazardSearch.h
